--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     },
     "files.associations": {
         "busca.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "fila.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
