--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "files.associations": {
         "busca.h": "c",
         "stdio.h": "c",
-        "fila.h": "c"
+        "fila.h": "c",
+        "pilha.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
